NMA | 2017-09-17 | Asignacion de Oficios
Asignacion de Oficios a los Funcionarios, se tomo en cuenta:
1 ) Que la aasignacion unicamente la hace un Director
2 ) Que se desplieguen de la lista los Funcionarios que corresponden al Tipo de Funcionario y Departamento Funcional.
3 ) Se establecio la Tabla donde se muestran los Funcionarios que pueden ser asignados el Oficio en Cuestion y asi Asignarselo a el .

********************************************
Falta Validar:
1 ) Que la Funcion retorne el Item del Funcionario Seleccionado
2 ) Que Actulize en la Tabla TblCorrespondeciaEnc el idFuncionarioAsignado.
3 ) Cambiar de Color el Boton segun la Accion
4 ) Enviar Correo a Funcionario recien Asignado.

--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -37,7 +37,13 @@ listascomunes_direccionSreciList:
 listascomunes_deptoFuncionalList:
     path: /subdir-sreci-list
     defaults: { _controller: "AppBundle:ListasComunes:deptoFuncionalList"}
-    methods: POST   
+    methods: POST
+    
+# Lista de Sub Direcciones por Usuario Logeado | 2017-09-15
+listascomunes_deptoFuncionalUser:
+    path: /depto-func-user
+    defaults: { _controller: "AppBundle:ListasComunes:deptoFuncionalUser"}
+    methods: POST
    
 # Lista de Departamento Funcional
 listascomunes_deptoFuncionalUserList:
@@ -99,3 +105,20 @@ listascomunes_asignarOficiosPageList:
     defaults: { _controller: "AppBundle:ListasComunes:asignarOficiosPageList"}
     methods: GET
     
+# Listado de Tipos de Funcionarios | 15-09-2017
+listascomunes_tipoFuncionariosList:
+    path: /tipo-funcionarios-list
+    defaults: { _controller: "AppBundle:ListasComunes:tipoFuncionariosList"}
+    methods: POST
+    
+# Listado de Funcionarios | 15-09-2017
+listascomunes_funcionariosList:
+    path: /funcionarios-list
+    defaults: { _controller: "AppBundle:ListasComunes:funcionariosList"}
+    methods: POST
+
+# Listado de Funcionarios po Depto Funcional | 15-09-2017
+listascomunes_funcionariosAsignadosList:
+    path: /funcionarios-depto-list
+    defaults: { _controller: "AppBundle:ListasComunes:funcionariosAsignadosList"}
+    methods: POST
