NAM | 217-09-18 | Asignar Oficios
La ventana de Asignar Oficos esta a un 80%, ya que falta enviar e correo de Notificacion del Oficio Asignado y Anexar el Documeno Inicial el cual fue cargado.
Pendientes:
1 ) Anexar el Documento (URL) -> Incluir Campo dentro de la BD
2 ) Anexar Imagen de Secretaria de Relacione Exteriores en el Correo
3 ) Validacion de las Banderas de los Botones:
      a ) Verde = Ingresado (Puede ser asignado)
      b ) Amarillo = Asignado (Puede ser asignado con previas condiciones)
      c ) Naranja = Por Vencer (Se puede asignar)
      d ) Rojo = Vencido (No se puede Asignar)
      e ) Azul = Cerrado (No se puede Asignar).

--- a/symfony/src/AppBundle/Resources/config/routing.yml
+++ b/symfony/src/AppBundle/Resources/config/routing.yml
@@ -28,4 +28,9 @@ app_listas:
 ## Redireccionamiento de las Ruta por Defecto | Modulo de Comunes
 app_comunes:
     resource: "@AppBundle/Resources/config/routing/comunes.yml"
-    prefix: /comunes    
+    prefix: /comunes
+    
+## Redireccionamiento de las Ruta por Defecto | Modulo de Seguimiento
+app_seguimiento:
+    resource: "@AppBundle/Resources/config/routing/seguimiento.yml"
+    prefix: /seguimiento
