NAM | 2017-09-20 | Banderas de Alerta en Aignacion de Oficios
Se agrego el sistema de ALerta de por Colores predefinidos segun el estado del Ofico, se valido que en la ventana de Asignar Oficios solo los pueda ver la Directora (Admin), y que solo vea los Oficios que estan recien ingresados, debera ingresar a una nueva ventana para consulta todos los Oficios.

--- a/symfony/src/AppBundle/Resources/config/routing/seguimiento.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/seguimiento.yml
@@ -1,7 +1,13 @@
 ## YAML Template.
 ---
-## Redireccionamiento de las Ruta por Defecto | Modulo Documentos
+## Redireccionamiento de las Ruta por Defecto | Modulo Seguimiento
 seguimiento_asignarOficio:
     path: /asignar-oficio
     defaults: { _controller: "AppBundle:SeguimientoCorrespondencia:asignarOficio" }
+    methods: POST
+
+## Transformacion de la Fechas TimeStamp | Modulo Seguimiento
+seguimiento_convertirFechasTimeStamp:
+    path: /convertir-fechas-timestamp
+    defaults: { _controller: "AppBundle:SeguimientoCorrespondencia:convertirFechasTimeStamp" }
     methods: POST
