NAM | 2017-09-22 | Finalizacion de Oficios
Se creo el servicio para que Actulize la BD desde la Comunicacio Enc e estado y fecha de Finalizacion; ademas Crea un nuevo registro en la Tabla Detalle; ya que esto hace un proceso de versionamiento en la Comunicacion (Fnalizado).
Falt Agregar el Metodo de Oficio de Respuesta parecido al de Finalizacion.

--- a/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/listascomunes.yml
@@ -122,3 +122,9 @@ listascomunes_funcionariosAsignadosList:
     path: /funcionarios-depto-list
     defaults: { _controller: "AppBundle:ListasComunes:funcionariosAsignadosList"}
     methods: POST
+    
+ ## Listado de Los Oficios Asignados por Usuario (Funcionario) | Modulo Seguimiento
+seguimiento_finalizarOficiosList:
+    path: /finalizar-oficios-list
+    defaults: { _controller: "AppBundle:ListasComunes:finalizarOficiosList" }
+    methods: POST
