--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaEnc.orm.yml
@@ -2,30 +2,30 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
     type: entity
     table: tbl_correspondencia_enc
     indexes:
-        fki_enc_inst:
+        fki_corr_depto:
             columns:
-                - id_institucion
-        fki_funcionario_asig:
-            columns:
-                - id_funcionario_asignado
+                - id_depto_funcional
         fki_enc_direccion:
             columns:
                 - id_direccion_sreci
         tbl_correspondencia_enc_cod_correspondencia_enc_idx:
             columns:
                 - cod_correspondencia_enc
-        fki_enc_user:
-            columns:
-                - id_usuario
         fki_enc_estado:
             columns:
                 - id_estado
+        fki_enc_inst:
+            columns:
+                - id_institucion
+        fki_enc_user:
+            columns:
+                - id_usuario
         fki_comu_docu:
             columns:
                 - id_tipo_documento
-        fki_corr_depto:
+        fki_funcionario_asig:
             columns:
-                - id_depto_funcional
+                - id_funcionario_asignado
     uniqueConstraints:
         tbl_correspondencia_enc_cod_correspondencia_enc_key:
             columns:
@@ -87,6 +87,10 @@ BackendBundle\Entity\TblCorrespondenciaEnc:
             options:
                 unsigned: false
             column: id_depto_acomp
+        fechaFinalizacion:
+            type: date
+            nullable: true
+            column: fecha_finalizacion
     manyToOne:
         idTipoDocumento:
             targetEntity: TblTipoDocumento
