--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaDet.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaDet.orm.yml
@@ -5,21 +5,21 @@ BackendBundle\Entity\TblCorrespondenciaDet:
         fki_det_enc:
             columns:
                 - id_correspondencia_enc
-        cod_oficio_respuesta:
-            columns:
-                - cod_oficio_respuesta
-        fki_fk-det_estado:
-            columns:
-                - id_estado
-        tbl_correspondencia_det_cod_correspondencia_det_idx:
-            columns:
-                - cod_correspondencia_det
-        fki_det_user:
-            columns:
-                - id_usuario
         fki_func_det_asignado:
             columns:
                 - id_funcionario_asignado
+        cod_oficio_respuesta:
+            columns:
+                - cod_oficio_respuesta
+        tbl_correspondencia_det_cod_correspondencia_det_idx:
+            columns:
+                - cod_correspondencia_det
+        fki_fk-det_estado:
+            columns:
+                - id_estado
+        fki_det_user:
+            columns:
+                - id_usuario
     uniqueConstraints:
         tbl_correspondencia_det_cod_correspondencia_det_key:
             columns:
@@ -78,6 +78,13 @@ BackendBundle\Entity\TblCorrespondenciaDet:
             options:
                 fixed: false
             column: cod_oficio_respuesta
+        temaComunicacion:
+            type: string
+            nullable: true
+            length: 150
+            options:
+                fixed: false
+            column: tema_comunicacion
     manyToOne:
         idEstado:
             targetEntity: TblEstados
