NAM | 2017-09-25 | Formulario de Ingreso Com Tipo
Creacion del Formulario de Ingreso de COmunicacion por Tipo de de Documento, se crearon los Tipos: Llamadas, Correos y Verbales, con el fin de establecer comunicacion informal y registrarle dentro del SICDOC.

--- a/symfony/src/AppBundle/Resources/config/routing/correspondencia.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/correspondencia.yml
@@ -8,6 +8,12 @@ correspondencia_newCorrespondencia:
     path: /new-correspondencia
     defaults: { _controller: "AppBundle:IngresoCorrespondencia:newCorrespondencia" }
     methods: POST
+    
+# Nuevo Ingreso de Correspondencia por Tipo
+correspondencia_newCorrespondenciaTipo:
+    path: /new-correspondencia-tipo
+    defaults: { _controller: "AppBundle:IngresoCorrespondencia:newCorrespondenciaTipo" }
+    methods: POST
 
 # Editar Correspondencia Existente
 correspondencia_editCorrespondencia:
