NMA | 2017-09-27 | Salida de Comunicacion
Se establecio los Filtros, en los que detalla que la seleccon de cada Comunicacion empleara una Accion respectiva, de modo que siseelcciona Oficio Generra El correlativo para Oficios con la Nomenclatura SCPI-* y asi con las Llamadas CALL-* Correos MAIL-* y comunicaciones verbales VERB-*.

--- a/symfony/src/AppBundle/Resources/config/routing/seguimiento.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/seguimiento.yml
@@ -23,3 +23,9 @@ seguimiento_creacionOficioResp:
     path: /creacion-oficio-asignado
     defaults: { _controller: "AppBundle:SeguimientoCorrespondencia:creacionOficioResp" }
     methods: POST
+    
+## Creacion Actividad de Respuesta | Modulo Seguimiento
+seguimiento_creacionActividadResp:
+    path: /creacion-actividad-resp
+    defaults: { _controller: "AppBundle:SeguimientoCorrespondencia:creacionActividadResp" }
+    methods: POST
