NMA | carga Semana
Carga desemana

--- a/symfony/src/AppBundle/Resources/config/routing.yml
+++ b/symfony/src/AppBundle/Resources/config/routing.yml
@@ -34,3 +34,8 @@ app_comunes:
 app_seguimiento:
     resource: "@AppBundle/Resources/config/routing/seguimiento.yml"
     prefix: /seguimiento
+    
+## Redireccionamiento de las Ruta por Defecto | Modulo de Consultas
+app_consultas:
+    resource: "@AppBundle/Resources/config/routing/consultas.yml"
+    prefix: /consultas
