--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -12,18 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/cdk": "github:angular/cdk-builds",
+    "@angular/animations": "^4.4.4",
+    "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.4.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
-    "@angular/material": "github:angular/material2-builds",
+    "@angular/material": "^2.0.0-beta.11",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jspdf": "^1.1.31",
+    "angular2-datatable": "^0.6.0",
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
     "ng2-auto-complete": "^0.12.0",
@@ -33,7 +35,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.3.2",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
