NAM | 2017-10-09 | Creacion de Cambio deContraseña
Creacion de la ventana de cambio de contraseña, falta validar que la contraseña actual no sea igual ala nueva y que la  Ingresada sea la misma que la de la BD

--- a/symfony/src/AppBundle/Resources/config/routing/usuario.yml
+++ b/symfony/src/AppBundle/Resources/config/routing/usuario.yml
@@ -15,3 +15,8 @@ usuario_upload_image:
     path: /upload-image-user
     defaults: { _controller: "AppBundle:Usuario:uploadImage" }
     methods: POST
+
+usuario_changePassUser:
+    path: /change-pass-user
+    defaults: { _controller: "AppBundle:Usuario:changePassUser" }
+    methods: POST
