--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
     "ng2-auto-complete": "^0.12.0",
+    "ng2-completer": "^1.6.3",
     "ng2-input-autocomplete": "0.0.11",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
