--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/jspdf": "^1.1.31",
+    "angular-material": "^1.1.5",
     "angular2-datatable": "^0.6.0",
+    "angular2-image-upload": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
     "ng2-auto-complete": "^0.12.0",
