--- a/Angular_SICDOC/sicdoc/package.json
+++ b/Angular_SICDOC/sicdoc/package.json
@@ -30,6 +30,7 @@
     "angular2-image-upload": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
     "jspdf": "^1.3.5",
+    "jspdf-autotable": "^2.3.2",
     "ng2-auto-complete": "^0.12.0",
     "ng2-completer": "^1.6.3",
     "ng2-input-autocomplete": "0.0.11",
