NMA | 2017-10-17 | Ingreso y Salida
Se modificaron las ventana de Ingreso y Salida de Comunicacion, se valido que que se ingrese Reuniones y Memo etc.
Revisar las inconsistencias de los Datos y empezar con la investigacion de agregar mas items de envio para el correo y la BD

--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblContactos.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblContactos.orm.yml
@@ -5,12 +5,15 @@ BackendBundle\Entity\TblContactos:
         fki_func_contacto:
             columns:
                 - id_funcionario
-        fki_institucion_contacto:
-            columns:
-                - id_institucion
         tbl_contactos_cod_contacto_idx:
             columns:
                 - cod_contacto
+        fki_contact_user_modif:
+            columns:
+                - id_usuario_modifica
+        fki_institucion_contacto:
+            columns:
+                - id_institucion
     id:
         idContacto:
             type: integer
@@ -109,6 +112,13 @@ BackendBundle\Entity\TblContactos:
             options:
                 fixed: false
             column: perfil_contacto
+        cargoFuncional:
+            type: string
+            nullable: true
+            length: 150
+            options:
+                fixed: false
+            column: cargo_funcional
     manyToOne:
         idFuncionario:
             targetEntity: TblFuncionarios
@@ -129,5 +139,15 @@ BackendBundle\Entity\TblContactos:
             joinColumns:
                 id_institucion:
                     referencedColumnName: id_institucion
+            orphanRemoval: false
+        idUsuarioModifica:
+            targetEntity: TblUsuarios
+            cascade: {  }
+            fetch: LAZY
+            mappedBy: null
+            inversedBy: null
+            joinColumns:
+                id_usuario_modifica:
+                    referencedColumnName: id_usuario
             orphanRemoval: false
     lifecycleCallbacks: {  }
