--- a/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaDet.orm.yml
+++ b/symfony/src/BackendBundle/Resources/config/doctrine/TblCorrespondenciaDet.orm.yml
@@ -2,24 +2,24 @@ BackendBundle\Entity\TblCorrespondenciaDet:
     type: entity
     table: tbl_correspondencia_det
     indexes:
-        cod_oficio_respuesta:
-            columns:
-                - cod_oficio_respuesta
-        fki_det_user:
-            columns:
-                - id_usuario
-        fki_func_det_asignado:
-            columns:
-                - id_funcionario_asignado
-        fki_det_enc:
-            columns:
-                - id_correspondencia_enc
-        tbl_correspondencia_det_cod_correspondencia_det_idx:
-            columns:
-                - cod_correspondencia_det
         fki_fk-det_estado:
             columns:
                 - id_estado
+        tbl_correspondencia_det_cod_correspondencia_det_idx:
+            columns:
+                - cod_correspondencia_det
+        cod_oficio_respuesta:
+            columns:
+                - cod_oficio_respuesta
+        fki_func_det_asignado:
+            columns:
+                - id_funcionario_asignado
+        fki_det_user:
+            columns:
+                - id_usuario
+        fki_det_enc:
+            columns:
+                - id_correspondencia_enc
     uniqueConstraints:
         tbl_correspondencia_det_cod_correspondencia_det_key:
             columns:
@@ -89,6 +89,12 @@ BackendBundle\Entity\TblCorrespondenciaDet:
             options:
                 fixed: false
             column: tema_comunicacion
+        instrucciones:
+            type: string
+            nullable: true
+            length: 1000
+            options:
+                fixed: false
     manyToOne:
         idEstado:
             targetEntity: TblEstados
